@@ -1,5 +1,6 @@
 using System;
 using System.Collections.Generic;
+using System.Diagnostics;
 using System.Linq;
 using GraphX.Measure;
 using GraphX.PCL.Common.Interfaces;
@@ -39,6 +40,8 @@ namespace GraphX.PCL.Logic.Algorithms.LayoutAlgorithms
         where TGraph : IVertexAndEdgeListGraph<TVertex, TEdge>
         where TParam : class, ILayoutParameters, new()
     {
+
+
         protected DefaultParameterizedLayoutAlgorithmBase(TGraph visitedGraph) 
             : base(visitedGraph)
         {
@@ -93,14 +96,20 @@ namespace GraphX.PCL.Logic.Algorithms.LayoutAlgorithms
 
 		#region Initializers
 
-        protected abstract TParam DefaultParameters { get; } 
+        protected abstract TParam DefaultParameters { get; }
 
-		/// <summary>
-		/// Initializes the parameters (cloning or creating new parameter object with default values).
-		/// </summary>
-		/// <param name="oldParameters">Parameters from a prevorious layout. If it is null, 
-		/// the parameters will be set to the default ones.</param>
-		protected void InitParameters( TParam oldParameters )
+        /// <summary>
+        /// Ensures that all positions generated by InitializeWithRandomPositions() method will be unique.
+        /// Can lead to excessive CPU usage for large amount of vertices. Default value is False. True for LinLog.
+        /// </summary>
+        protected bool EnsureUniqueRandomInitialPositions { get; set; }
+
+        /// <summary>
+        /// Initializes the parameters (cloning or creating new parameter object with default values).
+        /// </summary>
+        /// <param name="oldParameters">Parameters from a prevorious layout. If it is null, 
+        /// the parameters will be set to the default ones.</param>
+        protected void InitParameters( TParam oldParameters )
 		{
             if (oldParameters == null)
                 Parameters = DefaultParameters;
@@ -144,17 +153,33 @@ namespace GraphX.PCL.Logic.Algorithms.LayoutAlgorithms
 		protected virtual void InitializeWithRandomPositions( double width, double height, double translate_x, double translate_y )
 		{
             var rnd = new Random(Parameters.Seed);
-
             //initialize with random position
             foreach ( TVertex v in VisitedGraph.Vertices )
 			{
 				//for vertices without assigned position
 				if ( !VertexPositions.ContainsKey( v ) )
 				{
-					VertexPositions[v] =
-						new Point(
-							Math.Max( double.Epsilon, rnd.NextDouble() * width + translate_x ),
-							Math.Max( double.Epsilon, rnd.NextDouble() * height + translate_y ) );
+
+				    if (EnsureUniqueRandomInitialPositions)
+				    {
+				        Point newPoint;
+				        do
+				        {
+				            newPoint =
+				                new Point(
+				                    Math.Max(double.Epsilon, rnd.NextDouble()*width + translate_x),
+				                    Math.Max(double.Epsilon, rnd.NextDouble()*height + translate_y));
+				        } while (VertexPositions.Values.Contains(newPoint));
+				        VertexPositions[v] = newPoint;
+				    }
+				    else
+				    {
+				        VertexPositions[v] =
+				            new Point(
+				                Math.Max(double.Epsilon, rnd.NextDouble()*width + translate_x),
+				                Math.Max(double.Epsilon, rnd.NextDouble()*height + translate_y));
+				    }
+
 				}
 			}
 		}
